; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_upstream_dyups_module/extr_ngx_http_dyups_module.c_ngx_dyups_sync_cmd.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_upstream_dyups_module/extr_ngx_http_dyups_module.c_ngx_dyups_sync_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i32 }
%struct.TYPE_14__ = type { i64, i64 }
%struct.TYPE_15__ = type { i32, i64, i64, i64, i64 }

@NGX_DYUPS_DELETE = common dso_local global i64 0, align 8
@NGX_LOG_INFO = common dso_local global i32 0, align 4
@ngx_cycle = common dso_local global %struct.TYPE_13__* null, align 8
@.str = private unnamed_addr constant [35 x i8] c"[dyups] sync del: %V rv: %V rc: %i\00", align 1
@NGX_HTTP_OK = common dso_local global i64 0, align 8
@NGX_ERROR = common dso_local global i64 0, align 8
@NGX_OK = common dso_local global i64 0, align 8
@NGX_DYUPS_ADD = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [35 x i8] c"[dyups] sync add: %V rv: %V rc: %i\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, %struct.TYPE_14__*, %struct.TYPE_14__*, i64)* @ngx_dyups_sync_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ngx_dyups_sync_cmd(i32* %0, %struct.TYPE_14__* %1, %struct.TYPE_14__* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_14__*, align 8
  %8 = alloca %struct.TYPE_14__*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.TYPE_15__, align 8
  %12 = alloca %struct.TYPE_14__, align 8
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_14__* %1, %struct.TYPE_14__** %7, align 8
  store %struct.TYPE_14__* %2, %struct.TYPE_14__** %8, align 8
  store i64 %3, i64* %9, align 8
  %13 = load i64, i64* %9, align 8
  %14 = load i64, i64* @NGX_DYUPS_DELETE, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %33

16:                                               ; preds = %4
  %17 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %18 = call i64 @ngx_dyups_do_delete(%struct.TYPE_14__* %17, %struct.TYPE_14__* %12)
  store i64 %18, i64* %10, align 8
  %19 = load i32, i32* @NGX_LOG_INFO, align 4
  %20 = load %struct.TYPE_13__*, %struct.TYPE_13__** @ngx_cycle, align 8
  %21 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %24 = load i64, i64* %10, align 8
  %25 = call i32 @ngx_log_error(i32 %19, i32 %22, i32 0, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), %struct.TYPE_14__* %23, %struct.TYPE_14__* %12, i64 %24)
  %26 = load i64, i64* %10, align 8
  %27 = load i64, i64* @NGX_HTTP_OK, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %16
  %30 = load i64, i64* @NGX_ERROR, align 8
  store i64 %30, i64* %5, align 8
  br label %72

31:                                               ; preds = %16
  %32 = load i64, i64* @NGX_OK, align 8
  store i64 %32, i64* %5, align 8
  br label %72

33:                                               ; preds = %4
  %34 = load i64, i64* %9, align 8
  %35 = load i64, i64* @NGX_DYUPS_ADD, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %69

37:                                               ; preds = %33
  %38 = load %struct.TYPE_14__*, %struct.TYPE_14__** %8, align 8
  %39 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %38, i32 0, i32 1
  %40 = load i64, i64* %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %11, i32 0, i32 3
  store i64 %40, i64* %41, align 8
  %42 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %11, i32 0, i32 4
  store i64 %40, i64* %42, align 8
  %43 = load %struct.TYPE_14__*, %struct.TYPE_14__** %8, align 8
  %44 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %43, i32 0, i32 1
  %45 = load i64, i64* %44, align 8
  %46 = load %struct.TYPE_14__*, %struct.TYPE_14__** %8, align 8
  %47 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = add nsw i64 %45, %48
  %50 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %11, i32 0, i32 1
  store i64 %49, i64* %50, align 8
  %51 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %11, i32 0, i32 2
  store i64 %49, i64* %51, align 8
  %52 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %11, i32 0, i32 0
  store i32 1, i32* %52, align 8
  %53 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %54 = call i64 @ngx_dyups_do_update(%struct.TYPE_14__* %53, %struct.TYPE_15__* %11, %struct.TYPE_14__* %12)
  store i64 %54, i64* %10, align 8
  %55 = load i32, i32* @NGX_LOG_INFO, align 4
  %56 = load %struct.TYPE_13__*, %struct.TYPE_13__** @ngx_cycle, align 8
  %57 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %60 = load i64, i64* %10, align 8
  %61 = call i32 @ngx_log_error(i32 %55, i32 %58, i32 0, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0), %struct.TYPE_14__* %59, %struct.TYPE_14__* %12, i64 %60)
  %62 = load i64, i64* %10, align 8
  %63 = load i64, i64* @NGX_HTTP_OK, align 8
  %64 = icmp ne i64 %62, %63
  br i1 %64, label %65, label %67

65:                                               ; preds = %37
  %66 = load i64, i64* @NGX_ERROR, align 8
  store i64 %66, i64* %5, align 8
  br label %72

67:                                               ; preds = %37
  %68 = load i64, i64* @NGX_OK, align 8
  store i64 %68, i64* %5, align 8
  br label %72

69:                                               ; preds = %33
  br label %70

70:                                               ; preds = %69
  %71 = load i64, i64* @NGX_ERROR, align 8
  store i64 %71, i64* %5, align 8
  br label %72

72:                                               ; preds = %70, %67, %65, %31, %29
  %73 = load i64, i64* %5, align 8
  ret i64 %73
}

declare dso_local i64 @ngx_dyups_do_delete(%struct.TYPE_14__*, %struct.TYPE_14__*) #1

declare dso_local i32 @ngx_log_error(i32, i32, i32, i8*, %struct.TYPE_14__*, %struct.TYPE_14__*, i64) #1

declare dso_local i64 @ngx_dyups_do_update(%struct.TYPE_14__*, %struct.TYPE_15__*, %struct.TYPE_14__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
